--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install:
     commands:
-      - sam package --template-file template.yaml --s3-bucket michi-cloudchallenge --output-template-file packaged.yaml
+      - aws cloudformation package --template-file template.yaml --s3-bucket michi-cloudchallenge --output-template-file packaged.yaml
 artifacts:
   type: zip
   files:
